test/sema/function.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s

// CHECK: [[# @LINE + 1 ]]:11: error: failed to resolve type 'customType'
fn foo(): customType {}

// CHECK: [[# @LINE + 1 ]]:1: error: 'main' function is expected to take no arguments
fn main(x:number): unit {}

// CHECK: [[# @LINE + 1 ]]:1: error: 'main' function is expected to return 'unit'
fn main(): number {}

// CHECK-NOT: {{.*error.*}}
